--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+* [Doug Lowe](https://github.com/douglowe)
 * [Steve Crouch](https://github.com/steve-crouch)
 * [Aleksandra Nenadic](https://github.com/anenadic)
 * [James Graham](https://github.com/jag1g13)
