--- a/AUTHORS
+++ b/AUTHORS
@@ -1,16 +1,8 @@
-University of Southampton:
-- Steve Crouch <sc16@soton.ac.uk>
-- James Graham <j.graham@soton.ac.uk>
-- Sam Mangham < s.mangham@soton.ac.uk>
-
-University of Manchester:
-- Aleksandra Nenadic <a.nenadic@manchester.ac.uk>
-
-University of Oxford:
-- Martin Robinson <martin.robinson@cs.ox.ac.uk>
-
-Univeristy of Edinburgh:
-- Jacalyn Laird <J.Laird@epcc.ed.ac.uk>
-
-UKAEA:
-- Thomas Kiley <hi@tkiley.co.uk>
+* [Doug Lowe](https://github.com/douglowe)
+* [Steve Crouch](https://github.com/steve-crouch)
+* [Aleksandra Nenadic](https://github.com/anenadic)
+* [James Graham](https://github.com/jag1g13)
+* [Martin Robinson](https://github.com/martinjrobins)
+* [Sam Mangham](https://github.com/smangham)
+* [Jacalyn Laird](https://github.com/JacalynLaird)
+ 
