--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,10 @@
-* [Doug Lowe](https://github.com/douglowe)
+* [Douglas Lowe](https://github.com/douglowe)
 * [Steve Crouch](https://github.com/steve-crouch)
 * [Aleksandra Nenadic](https://github.com/anenadic)
 * [James Graham](https://github.com/jag1g13)
 * [Martin Robinson](https://github.com/martinjrobins)
 * [Sam Mangham](https://github.com/smangham)
 * [Jacalyn Laird](https://github.com/JacalynLaird)
+* [Thomas Kiley](https://github.com/thomaskileyukaea)
+* [Matthew Bluteau](https://github.com/bielsnohr)
  
